[project]
name = "streamlit-cookies-manager"
version = "0.3.0"
description = "Access and save cookies from Streamlit"
authors = [
    { name = "Tomasz Kontusz", email = "tomasz.kontusz@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.18.0",
    "cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_cookies_manager"]

[tool.hatch.build.targets.wheel.force-include]
"streamlit_cookies_manager/build" = "streamlit_cookies_manager/build"
